--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -27,7 +27,7 @@
 	font-family: "Lucida Console", Monaco, Monospace;
   }
 
-	li {
+	ul {
 		color: #32cd32;
 		font-size: 1em;
 		margin-bottom: .3em;
