--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -14,7 +14,13 @@
     text-align: centre;
 	font-family: "Lucida Console", Monaco, Monospace;
   }
-
+	h3  {
+		color: #32cd32;
+		font-size: 1em;
+		margin-bottom: 0.5em;
+		text-align: centre;
+	font-family: "Lucida Console", Monaco, Monospace;
+	}
   img {
       image-orientation: from-image;
   }
